Convert mdsal-netconf-notification to OSGi DS
The blueprint here is quite simple, even if a bit confusing. At the end
of the day we have only two components with services and a few plugins.

Change-Id: I8d715d1db2ac66972c432e2b2808ad02cba7a463
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>